appId: com.clementgexpo.squadlink
---
- launchApp
- assertVisible: "Connexion en cours..."
- runFlow:
    when:
      visible: "Se connecter"
    commands:
      - tapOn: "Se connecter"
      - assertVisible: "Email"
      - inputText: "test@example.com"
      - tapOn: "Mot de passe"
      - inputText: "password123"
      - tapOn: "Se connecter"
      - assertVisible: 
          text: "Profils compatibles"
